--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-bootstrap": "~0.13.0",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "webicon": "~0.10.1",
+    "restangular": "1.5.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
